# QNX_OPC_UA

./: CMakeLists.txt  CMakeLists.txt.user.38cbf92  README.md  main.c  main.h
include/mqueue/: mqueue_lib.h
include/open62541/: config.h
